<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:padding="8dp">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          tools:srcCompat="@tools:sample/avatars"
          android:contentDescription="@string/todo" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/sign_in"
          android:textColor="@color/black"
          android:textSize="31sp" />

      <TextView
          android:id="@+id/txt_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/username_or_phone_number"
          android:textColor="@color/black"
          android:textSize="19sp" />

      <EditText
          android:id="@+id/editTextTextPersonName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:ems="10"
          android:hint="@string/username_or_phone"
          android:inputType="textPersonName"
          android:textColorHint="@color/Hint_Color_Light"
          android:autofillHints="" />

      <TextView
          android:id="@+id/txt_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textColor="@color/black"
          android:textSize="19sp" />

      <EditText
          android:id="@+id/editTextTextPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:textColorHint="@color/Hint_Color_Light"
          android:autofillHints="" />

      <TextView
          android:id="@+id/txt_forget"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/forgot_password"
          android:textColor="@color/colorPrimary3"
          android:textSize="16sp" />

      <Button
          android:id="@+id/button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="15dp"
          android:background="@drawable/btn_sign_in"
          android:text="@string/log_in" />
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>